--- a/styles/component6.css
+++ b/styles/component6.css
@@ -148,7 +148,7 @@
 
 #component6 .content>h3 {
     margin-bottom: 15px;
-    width: 100%;
+    width: auto;
     font-weight: bold;
     font-size: 18px;
     color: #2C3E50;
@@ -156,7 +156,7 @@
 
 #component6 .content>.stars {
     margin-bottom: 10px;
-    width: 100%;
+    width: auto;
     font-size: 15px;
     color: #1ABC9C;
 }
